--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ language: python
 python:
   - "3.4"
 install: make install.dev
-script: make test
+script: make test.travis
 addons:
   postgresql: "9.4"
