--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@
 language: python
 python:
   - "3.4"
-install: make install.dev
+install: make install.travis
 script: make test.travis
 addons:
   postgresql: "9.4"
