--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 # Config file for automatic testing at travis-ci.org
 language: python
+sudo: required
+dist: trusty
 python:
   - "3.4"
   - "3.5"
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install pdftk -y
 install: make install.travis
 script: make test.travis
 addons:
